# class-diagram-tool

./: CMakeLists.txt  README.md
src/: ClassBox.qml  HeaderParser.cpp  HeaderParser.h  InheritanceLine.qml  diagrammanager.cpp  diagrammanager.h  main.cpp  main.qml  resources.qrc
tests/: ComplexInheritance.h  Containers.h  ManySiblings.h  MixedAndComplex.h  MultipleAndDiamond.h  MultipleWideLayers.h  NestedTypesAndComments.h  Shape.h  VaryingWidths.h
